name:                 comp1100-final
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Tony Hosking
maintainer:           antony.hosking@anu.edu.au
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10
extra-source-files:   dictionary

executable anagrams
  main-is:              AnagramsMain.hs
  other-modules:        Anagrams
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       .
  default-language:     Haskell2010

library
  build-depends:        base >= 4.7 && < 5, QuickCheck, HUnit, binary, random, doctest
  exposed-modules:      Anagrams, Date, First1, First2, Nat
  default-language:     Haskell2010
